carousel made responsive

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="container ">
-                    <div class=" flex flex-row overflow-x-scroll" id="movieName">
+                    <div class=" flex flex-row overflow-x-scroll mx-4" id="movieName">
 
                     </div>
                 </div>
